@@ -1,3 +1,6 @@
+Jun 01, 2022
+  genes: added logging and summary reporting of inserted genes
+
 May 25, 2022
   aliases: prefix 'LOW QUALITY PROTEIN:' is removed if present
 
